<resources>
    <string name="app_name">CampusExpense Manager</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="enter_id">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="ok">Submit</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="login2">Login</string>
    <string name="cancel2">Cancel</string>
    <string name="welcome_constraint_layout">Welcome Constraint layout</string>
    <string name="it0601">IT0601</string>
    <string name="it0602" />
    <string name="it0602_android">IT0602 Android</string>
    <string name="account">Account</string>
    <string name="welcome_to_table_layout">Welcome to Table layout</string>
    <string name="url">URL</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="fullname">Fullname</string>
    <string name="address">Address</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="my_profile">My Profile</string>
    <string name="first_activity_running">First Activity Running</string>
    <string name="start_activity">Start Activity</string>
    <string name="second_activity_running">Second Activity Running</string>
    <string name="dong_y_voi_cac_dieu_khoan">Dong y voi cac dieu khoan</string>
    <string name="_20_age">20 age</string>
    <string name="confirm">Confirm</string>
    <string name="normal">Normal</string>
    <string name="good">Good</string>
    <string name="very_good">Very Good</string>
    <string name="send_data">Send Data</string>
    <string name="show_toast">Show Toast</string>
    <string name="show_alertdialog">show AlertDialog</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Home page</string>
    <string name="profile_page">Profile page</string>
    <string name="setting_page">Setting page</string>
    <string name="products_list">Products list</string>
    <string name="_1">1</string>
    <string name="iphone_15_128gb">Iphone 15 - 128GB</string>
    <string name="_2000">2000</string>
</resources>