<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/gray">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/table_heading">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </TableRow>
    <TableRow
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Thanh Trieu"
            android:textColor="#C71818"
            android:paddingEnd="10dp"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="trieunt6@gmail.com"
            android:textColor="#C71818"
            android:paddingEnd="10dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="0975091304"
            android:textColor="#C71818"
            android:paddingEnd="10dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Ha noi"
            android:textColor="#C71818"
            android:paddingEnd="10dp"/>
    </TableRow>
</TableLayout>